feat(api): add auth, settlement flow, tests, and prisma migration scaffold

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/clawhunt"
 REDIS_URL="redis://localhost:6379"
 PORT="3000"
 NODE_ENV="development"
+API_KEY="replace-with-strong-key"
